--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nafiz | Gaming Website</title>
-  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <title>Nafiz | Cyber Galactic Gaming</title>
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Orbitron&display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0;
@@ -13,11 +13,32 @@
     }
 
     body {
-      font-family: 'Press Start 2P', cursive;
-      background: linear-gradient(135deg, #1f1f1f, #0a0a0a);
-      color: #fff;
+      font-family: 'Orbitron', sans-serif;
+      background: #000;
+      color: #00ff00;
       overflow-x: hidden;
-      position: relative;
+      height: 100vh;
+      padding: 0;
+      margin: 0;
+    }
+
+    /* Space background with stars */
+    body::before {
+      content: '';
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: url('https://cdn.pixabay.com/photo/2017/08/30/22/58/space-2695566_960_720.jpg') no-repeat center center fixed;
+      background-size: cover;
+      z-index: -1;
+      opacity: 0.7;
+    }
+
+    /* Smooth scrolling */
+    html {
+      scroll-behavior: smooth;
     }
 
     /* Side Navigation */
@@ -25,9 +46,9 @@
       position: fixed;
       top: 0;
       left: 0;
-      width: 200px;
+      width: 240px;
       height: 100%;
-      background-color: #0f0f0f;
+      background-color: rgba(0, 0, 0, 0.8);
       padding-top: 20px;
       display: flex;
       flex-direction: column;
@@ -39,11 +60,12 @@
     nav a {
       text-decoration: none;
       color: #00ff00;
-      font-size: 1.5em;
+      font-size: 1.4em;
       margin: 15px 0;
       text-transform: uppercase;
       letter-spacing: 2px;
-      transition: color 0.3s ease-in-out, transform 0.3s ease;
+      font-family: 'Press Start 2P', cursive;
+      transition: color 0.3s ease, transform 0.3s ease;
     }
 
     nav a:hover {
@@ -53,7 +75,7 @@
 
     /* Main Content */
     .main-content {
-      margin-left: 220px;
+      margin-left: 240px;
       padding: 50px;
       animation: fadeIn 2s ease-out forwards;
     }
@@ -61,12 +83,13 @@
     header {
       text-align: center;
       margin-bottom: 40px;
+      color: #ff0066;
     }
 
     h1 {
-      font-size: 3.5em;
+      font-size: 4em;
       color: #00ff00;
-      text-shadow: 0px 0px 20px rgba(0, 255, 0, 0.5);
+      text-shadow: 0px 0px 20px rgba(0, 255, 0, 0.7);
       animation: fadeInUp 2s ease-out;
     }
 
@@ -74,13 +97,13 @@
       font-size: 1.2em;
       color: #dcdcdc;
       line-height: 1.8;
-      max-width: 700px;
+      max-width: 800px;
       margin: auto;
       opacity: 0;
       animation: fadeIn 2s ease-out 0.5s forwards;
     }
 
-    /* Section Styles */
+    /* Sections */
     .section {
       margin-top: 40px;
       animation: fadeInUp 1.5s ease-out forwards;
@@ -100,7 +123,7 @@
     }
 
     .section p {
-      font-size: 1.5em;
+      font-size: 1.2em;
       color: #e0e0e0;
       max-width: 800px;
       margin: auto;
@@ -136,18 +159,52 @@
       }
     }
 
+    /* Footer */
     footer {
       position: fixed;
       bottom: 0;
       width: 100%;
       text-align: center;
       padding: 20px;
-      background-color: #0f0f0f;
-      font-size: 1.2em;
+      background-color: rgba(0, 0, 0, 0.8);
+      font-size: 1em;
       color: #ff0066;
       animation: fadeInUp 2s ease-out 1.5s forwards;
     }
 
+    /* Color Changing Background */
+    .color-change {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 50px;
+    }
+
+    .color-change button {
+      background-color: #ff0066;
+      color: #fff;
+      font-size: 1.2em;
+      padding: 10px 20px;
+      border: none;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    .color-change button:hover {
+      background-color: #00ff00;
+    }
+
+    /* Bangladeshi Info Section */
+    .bangladesh-info {
+      font-size: 1.2em;
+      color: #e0e0e0;
+      max-width: 800px;
+      margin: auto;
+      margin-top: 40px;
+      padding: 20px;
+      background-color: rgba(0, 0, 0, 0.7);
+      border-radius: 10px;
+    }
   </style>
 </head>
 <body>
@@ -158,63 +215,35 @@
     <a href="#favorite-things">Favorite Things</a>
     <a href="#freefire">Why Free Fire?</a>
     <a href="#tiktok">My TikTok</a>
+    <a href="#bangladesh">About Bangladesh</a>
     <a href="#contact">Contact Me</a>
   </nav>
 
   <!-- Main Content -->
   <div class="main-content">
     <header>
-      <h1>Welcome to Nafiz's Gaming World</h1>
-      <p>Explore my passions, my favorite games, and much more!</p>
+      <h1>Welcome to Nafiz's Cyber Galactic World</h1>
+      <p>Explore my hacker-gamer galaxy, where the future of gaming awaits!</p>
     </header>
 
     <section id="about" class="section">
       <h2 class="section-header">About Me</h2>
       <p>
-        Hey, I'm Nafiz! I’m a big fan of **football**, **gaming**, and of course, **Free Fire**.  
-        I live for the thrill of esports matches and love to compete. My all-time favorite footballer is **CR7 (Cristiano Ronaldo)**!  
-        Welcome to my online space where I share everything I’m passionate about!
+        Hey, I'm Nafiz! I’m a huge fan of **football**, **gaming**, and, of course, **Free Fire**.  
+        I live for the thrill of esports and the intensity of gaming. I’m a proud fan of **CR7** and am always chasing the ultimate gaming experience.
       </p>
     </section>
 
     <section id="favorite-things" class="section">
       <h2 class="section-header">My Favorite Things</h2>
       <p>
-        🏆 **Football**: Can't get enough of the game! CR7 is my idol.  
-        🎮 **Gaming**: Free Fire is my go-to game! The adrenaline is unmatched.  
-        🍔 **Food**: Shawarma is life – I could eat it all day, every day!
+        🏆 **Football**: I’m obsessed with the sport! CR7 is my idol.  
+        🎮 **Gaming**: Free Fire is my escape; I live for the adrenaline.  
+        🍔 **Food**: Shawarma = Life. End of story. 😅
       </p>
     </section>
 
     <section id="freefire" class="section">
       <h2 class="section-header">Why Free Fire?</h2>
       <p>
-        Free Fire isn’t just a game – it’s a way of life! I love the fast-paced action, the strategies, and the **esports** vibe. It keeps me on my toes, and I feel like a champion every time I step into a match!
-      </p>
-    </section>
-
-    <!-- TikTok Section -->
-    <section id="tiktok" class="section">
-      <h2 class="section-header">Follow Me on TikTok</h2>
-      <p>
-        📱 **TikTok**: @nafiz_prettyy  
-        <br>Check out my TikTok for some epic gaming clips, funny moments, and more!
-      </p>
-    </section>
-
-    <section id="contact" class="section">
-      <h2 class="section-header">Contact Me</h2>
-      <p>
-        📧 Email: nafiz@example.com <br>
-        📱 Instagram: @nafiz_official <br>
-        💬 Twitter: @nafiz_17
-      </p>
-    </section>
-
-    <footer>
-      <p>© 2025 Nafiz | All Rights Reserved</p>
-    </footer>
-  </div>
-
-</body>
-</html>
+        Free Fire isn't just a game for me. It’s a **lifestyle**. The fast-paced action, the strategies, and the **esports** vibe make it a perfect fit for my personality
