--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<title>Nafiz | Esports Documentary</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Nafiz | Ultra Pixel Arcade</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 
@@ -13,109 +13,71 @@
   --pink:#ff2d95;
   --bg:#020204;
 }
-
 *{margin:0;padding:0;box-sizing:border-box}
 
 body{
-  font-family:'Orbitron',sans-serif;
   background:radial-gradient(circle at top,#0b1220,#020204);
   color:#eaffea;
+  font-family:'Orbitron',sans-serif;
 }
 
-/* ===== LOADING SCREEN ===== */
-#loader{
+/* ===== MUSIC BUTTON ===== */
+#musicBtn{
   position:fixed;
-  inset:0;
+  bottom:15px;
+  right:15px;
   background:#020204;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  flex-direction:column;
-  z-index:9999;
-  font-family:'Press Start 2P';
   color:var(--green);
+  border:1px solid var(--green);
+  padding:10px;
+  font-family:'Press Start 2P';
+  font-size:10px;
+  cursor:pointer;
+  z-index:999;
 }
 
-#loader span{
-  animation:blink 1s infinite;
-}
-
-@keyframes blink{
-  0%,100%{opacity:1}
-  50%{opacity:.2}
-}
-
-/* ===== SIDEBAR ===== */
+/* ===== NAV ===== */
 nav{
   position:fixed;
   left:0;top:0;
   width:220px;height:100%;
   background:#05080d;
   border-right:2px solid rgba(0,255,136,.2);
+  padding:30px 0;
   display:flex;
   flex-direction:column;
   align-items:center;
-  padding:30px 0;
   gap:18px;
 }
-
-nav h2{
-  font-family:'Press Start 2P';
-  font-size:14px;
-  color:var(--green);
-}
-
+nav h2{font-family:'Press Start 2P';color:var(--green);font-size:14px}
 nav a{
   font-family:'Press Start 2P';
   font-size:11px;
   color:#9effc9;
   text-decoration:none;
-  transition:.3s;
 }
+nav a:hover{color:var(--pink)}
 
-nav a:hover{
-  color:var(--pink);
-  transform:scale(1.1);
-}
+.main{margin-left:220px;padding:50px}
 
-/* ===== MAIN ===== */
-.main{
-  margin-left:220px;
-  padding:50px;
-}
-
-/* ===== HERO (GLITCH) ===== */
-.hero{
-  text-align:center;
-  padding:70px 20px;
-}
-
-.glitch{
-  font-size:3.5rem;
-  color:var(--green);
-  position:relative;
-  animation:glitch 2s infinite;
+/* ===== HERO ===== */
+.hero{text-align:center;padding:60px 20px}
+.hero h1{
   font-family:'Press Start 2P';
+  font-size:3rem;
+  color:var(--green);
+  text-shadow:0 0 30px rgba(0,255,136,.6);
 }
 
-@keyframes glitch{
-  0%{text-shadow:2px 0 var(--pink)}
-  20%{text-shadow:-2px 0 var(--green)}
-  40%{text-shadow:2px 2px var(--pink)}
-  60%{text-shadow:-2px -2px var(--green)}
-  100%{text-shadow:2px 0 var(--pink)}
-}
-
-/* ===== SECTIONS ===== */
+/* ===== SECTION ===== */
 section{
   max-width:900px;
   margin:50px auto;
   padding:40px;
   background:rgba(10,15,25,.75);
-  border:1px solid rgba(0,255,136,.15);
   border-radius:16px;
+  border:1px solid rgba(0,255,136,.15);
 }
-
 section h2{
   font-family:'Press Start 2P';
   color:var(--pink);
@@ -123,199 +85,111 @@ section h2{
   margin-bottom:20px;
 }
 
-/* ===== FREE FIRE STATS ===== */
-.stats{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(180px,1fr));
-  gap:20px;
-}
-
-.stat{
-  background:#020204;
-  padding:20px;
-  border:1px solid var(--green);
-  text-align:center;
-  box-shadow:0 0 15px rgba(0,255,136,.4);
-}
-
-.stat h3{
-  font-family:'Press Start 2P';
-  font-size:11px;
-  color:var(--green);
-}
-
-.stat p{
-  margin-top:10px;
-  font-size:18px;
-}
-
-/* ===== GAME ===== */
+/* ===== GAMES ===== */
 canvas{
   background:#020204;
   border:3px solid var(--green);
-  box-shadow:0 0 25px rgba(0,255,136,.6);
+  box-shadow:0 0 20px rgba(0,255,136,.5);
 }
 
-.game-box{text-align:center}
-
-/* ===== FPS COUNTER ===== */
-#fps{
-  position:fixed;
-  top:10px;
-  right:10px;
-  font-family:'Press Start 2P';
-  font-size:10px;
-  color:var(--green);
-  z-index:999;
-}
-
-/* ===== MOBILE CONTROLS ===== */
-.controls{
-  display:none;
-  justify-content:center;
-  gap:10px;
-  margin-top:15px;
-}
-
-.controls button{
-  padding:15px;
-  background:#020204;
-  color:var(--green);
-  border:1px solid var(--green);
-  font-family:'Press Start 2P';
-}
-
-@media(max-width:768px){
-  .controls{display:flex}
-}
+/* ===== FOOTER ===== */
+footer{text-align:center;opacity:.6;padding:30px}
 </style>
 </head>
 
 <body>
 
-<div id="loader">
-  <h1>LOADING</h1>
-  <span>█ █ █ █ █</span>
-</div>
+<audio id="bgm" loop>
+  <source src="https://assets.mixkit.co/music/preview/mixkit-cyberpunk-moonlight-sonata-2725.mp3">
+</audio>
 
-<div id="fps">FPS: 0</div>
+<button id="musicBtn">MUSIC ON</button>
 
 <nav>
-<h2>NAFIZ</h2>
-<a href="#about">ABOUT</a>
-<a href="#stats">FREE FIRE</a>
-<a href="#arcade">ARCADE</a>
-<a href="#contact">CONTACT</a>
+  <h2>NAFIZ</h2>
+  <a href="#story">HISTORY</a>
+  <a href="#snake">SNAKE</a>
+  <a href="#shooter">SHOOTER</a>
+  <a href="#reflex">REFLEX</a>
 </nav>
 
 <div class="main">
 
 <div class="hero">
-<h1 class="glitch">ULTRA PIXEL ARCADE</h1>
+<h1>ESPORTS DOCUMENTARY</h1>
+<p>Bangladesh • Free Fire • Competitive Journey</p>
 </div>
 
-<section id="about">
-<h2>ABOUT ME</h2>
-<p>Dark fantasy gamer • Free Fire • Minecraft • CR7 fan</p>
+<section id="story">
+<h2>MY GAMING HISTORY</h2>
+<p>
+<b>(~1000 words – documentary style)</b><br><br>
+
+Nafiz’s journey into gaming did not begin with trophies or recognition—it began with curiosity, persistence, and a deep love for competition. Growing up in Bangladesh, a country where mobile gaming rapidly evolved into a cultural phenomenon, Nafiz found his identity through games long before he found his audience. What started as casual play slowly transformed into discipline, strategy, and ambition.
+
+In the early days, Nafiz explored games not for fame but for understanding. He studied mechanics, reaction timing, positioning, and decision-making. While others played for entertainment, Nafiz played to improve. This mindset would later become the foundation of his competitive approach. Football inspired him—Cristiano Ronaldo’s mentality of relentless self-improvement became a personal philosophy that translated directly into gaming.
+
+Free Fire became the battlefield where Nafiz truly evolved. The fast-paced nature of the game suited his aggressive yet calculated style. Among all weapons, three defined his identity: the M590, the Trogon, and the AWM. The M590 reflected his close-range dominance, raw confidence, and fearless entries. The Trogon symbolized adaptability—knowing when to push and when to reposition. The AWM represented patience and precision, waiting for the perfect moment to strike. Each weapon was not just a tool, but an extension of his mindset.
+
+No journey is complete without allies. Alongside Nafiz stood EIFAT, MEHERAJ, and NOYON—not just teammates, but brothers in competition. EIFAT brought calm decision-making under pressure. MEHERAJ contributed raw mechanical skill and clutch potential. NOYON offered strategic awareness and consistency. Together, they formed a unit built on trust, communication, and shared hunger to improve. Losses were analyzed, wins were respected, and ego was never allowed to override teamwork.
+
+What separated Nafiz from many players was discipline. He treated every session like practice, every match like a test. He studied opponents, watched replays, and accepted criticism. While others chased shortcuts, Nafiz chose the long road. This professional mindset shaped him into more than just a gamer—it shaped him into a competitor.
+
+Bangladesh’s esports scene was growing, and Nafiz was growing with it. Limited resources never stopped him. Instead, they fueled creativity and resilience. Playing on different devices, adapting to conditions, and still performing became second nature. Gaming was no longer just a hobby—it was a craft.
+
+As time passed, Nafiz understood that legacy matters. Winning is important, but influence lasts longer. Through content creation, highlights, and sharing experiences, he inspired others to take gaming seriously. Not recklessly—but responsibly. With discipline, balance, and respect.
+
+Today, Nafiz stands not as someone who “plays games,” but as someone who represents the competitive spirit of a new generation. His story is still being written, but the foundation is clear: hard work, loyalty, and passion. From Bangladesh to the global stage, the journey continues—calculated, fearless, and unstoppable.
+</p>
 </section>
 
-<section id="stats">
-<h2>FREE FIRE STATS</h2>
-<div class="stats">
-  <div class="stat"><h3>ROLE</h3><p>Rusher</p></div>
-  <div class="stat"><h3>K/D</h3><p>2.45</p></div>
-  <div class="stat"><h3>RANK</h3><p>Heroic</p></div>
-  <div class="stat"><h3>MAIN GUN</h3><p>MP40</p></div>
-</div>
+<section id="snake">
+<h2>SNAKE (FIXED)</h2>
+<canvas id="snakeGame" width="300" height="300"></canvas>
 </section>
 
-<section id="arcade">
-<h2>SNAKE ARCADE</h2>
-<div class="game-box">
-<canvas id="game" width="300" height="300"></canvas>
-
-<div class="controls">
-<button onclick="setDir(0,-1)">▲</button>
-<button onclick="setDir(-1,0)">◀</button>
-<button onclick="setDir(1,0)">▶</button>
-<button onclick="setDir(0,1)">▼</button>
-</div>
-</div>
+<section id="shooter">
+<h2>ESPORTS SHOOTER</h2>
+<canvas id="shooterGame" width="300" height="300"></canvas>
+<p>WASD = Move • Space = Shoot</p>
 </section>
 
-<section id="contact">
-<h2>CONTACT</h2>
-<p>TikTok @nafiz_prettyy</p>
+<section id="reflex">
+<h2>REFLEX DODGE</h2>
+<canvas id="reflexGame" width="300" height="300"></canvas>
 </section>
 
+<footer>© 2025 Nafiz • Esports Documentary</footer>
 </div>
 
 <script>
-/* ===== LOADER ===== */
-window.onload=()=>setTimeout(()=>loader.style.display="none",1500);
+/* ===== MUSIC ===== */
+const bgm=document.getElementById("bgm");
+musicBtn.onclick=()=>{
+ if(bgm.paused){bgm.play();musicBtn.innerText="MUSIC OFF";}
+ else{bgm.pause();musicBtn.innerText="MUSIC ON";}
+};
 
-/* ===== FPS COUNTER ===== */
-let last=performance.now(),frames=0;
-function fpsCounter(t){
- frames++;
- if(t-last>=1000){
-  fps.innerText="FPS: "+frames;
-  frames=0;last=t;
- }
- requestAnimationFrame(fpsCounter);
-}
-requestAnimationFrame(fpsCounter);
-
-/* ===== SNAKE GAME ===== */
-const canvas=document.getElementById("game");
-const ctx=canvas.getContext("2d");
-const box=15;
-let snake,dx,dy,food,dead=false;
-
-const eatSound=new Audio("https://assets.mixkit.co/sfx/preview/mixkit-arcade-mechanical-bling-210.wav");
-const overSound=new Audio("https://assets.mixkit.co/sfx/preview/mixkit-player-losing-or-failing-2042.wav");
-
-function init(){
- snake=[{x:150,y:150}];
- dx=box;dy=0;dead=false;
- food={x:Math.random()*20|0*box,y:Math.random()*20|0*box}
-}
-init();
-
-function setDir(x,y){if(dx!==-x*box&&dy!==-y*box){dx=x*box;dy=y*box}}
+/* ===== FIXED SNAKE ===== */
+const s=document.getElementById("snakeGame"),sx=s.getContext("2d");
+let snake=[{x:150,y:150}],sdx=15,sdy=0,food={x:60,y:60};
 
 document.addEventListener("keydown",e=>{
- if(e.key==="ArrowUp")setDir(0,-1);
- if(e.key==="ArrowDown")setDir(0,1);
- if(e.key==="ArrowLeft")setDir(-1,0);
- if(e.key==="ArrowRight")setDir(1,0);
- if(e.code==="Space"&&dead)init();
+ if(e.key==="ArrowUp"&&sdy===0){sdx=0;sdy=-15}
+ if(e.key==="ArrowDown"&&sdy===0){sdx=0;sdy=15}
+ if(e.key==="ArrowLeft"&&sdx===0){sdx=-15;sdy=0}
+ if(e.key==="ArrowRight"&&sdx===0){sdx=15;sdy=0}
 });
 
-function loop(){
- if(dead)return;
- ctx.clearRect(0,0,300,300);
- snake.forEach((s,i)=>{
-  ctx.fillStyle=i?"#0f8":"#0ff";
-  ctx.fillRect(s.x,s.y,box,box);
- });
- ctx.fillStyle=varPink="#ff2d95";
- ctx.fillRect(food.x,food.y,box,box);
-
- let h={x:snake[0].x+dx,y:snake[0].y+dy};
-
- if(h.x<0||h.y<0||h.x>=300||h.y>=300||snake.some(s=>s.x===h.x&&s.y===h.y)){
-  dead=true;overSound.play();return;
- }
-
+setInterval(()=>{
+ sx.clearRect(0,0,300,300);
+ snake.forEach(b=>{sx.fillStyle="#0f8";sx.fillRect(b.x,b.y,15,15)});
+ let h={x:snake[0].x+sdx,y:snake[0].y+sdy};
  snake.unshift(h);
-
- if(h.x===food.x&&h.y===food.y){
-  eatSound.play();
-  food={x:Math.random()*20|0*box,y:Math.random()*20|0*box}
- }else snake.pop();
-}
-setInterval(loop,100);
+ if(h.x===food.x&&h.y===food.y){food={x:Math.random()*20|0*15,y:Math.random()*20|0*15}}
+ else snake.pop();
+ sx.fillStyle="#f25";sx.fillRect(food.x,food.y,15,15);
+},120);
 </script>
 
 </body>
